--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,11 @@ services:
       - ./toaddress.txt:/app/toaddress.txt
       - ./config.json:/app/config.json
       - ./node_modules:/app/node_modules
-
     working_dir: /app
     command: npm start
     restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "1"
